--- a/client/src/App.css
+++ b/client/src/App.css
@@ -37,6 +37,9 @@
   .historyList {
     margin-left: 10%;
   }
+  .historyList li:nth-of-type(1n+4) {
+    display: none;
+  }
 }
 
 .instructions {
