--- a/client/src/App.css
+++ b/client/src/App.css
@@ -42,7 +42,17 @@
     display: none;
   }
   .textField {
-    height: 60px;
+    height: 50px;
+  }
+  .welcomeScreenTitle {
+    padding-right: 127px;
+    text-align: center;
+    padding-left: 77px;
+  }
+  .welcomeScreenForm {
+    text-align: center;
+    margin-left: 0;
+    margin-top: 12px;
   }
 }
 
