--- a/client/src/App.css
+++ b/client/src/App.css
@@ -66,7 +66,7 @@
   }
   .addressesScreen {
     text-align: center;
-    margin-left: 5px;
+    width: 80%;
   }
   .input-container {
     width: 100%;
